# ferrum-edge

./: .gitignore  ADMIN_API_RUNTIME_ANALYSIS.md  ARCHITECTURE.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  CUSTOM_PLUGINS.md  Cargo.toml  Cross.toml  DATABASE_SCHEMA_ANALYSIS.md  DOCUMENTATION_UPDATES_SUMMARY.md  Dockerfile  Dockerfile.release  Dockerfile.test  FEATURES.md  IMPLEMENTATION_ANALYSIS.md  LICENSE  PERF_ANALYSIS_PLAN.md  README.md  REQUIREMENTS.md  SECURITY.md  WEBSOCKET.md  WEBSOCKET_BIDIRECTIONAL_DEMO.md  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_TLS_ANALYSIS.md  build.rs  docker-compose.yml  ferrum.conf  openapi.yaml
.cargo/: config.toml
.claude/: .gitignore
.github/ISSUE_TEMPLATE/: security.yml
.github/workflows/: ci.yml  claude-review.yml  cleanup-pending-reviews.yml  comparison-benchmark.yml  connection-saturation-benchmark.yml  gateway-api-conformance.yml  gateways-protocol-benchmark.yml  payload-size-benchmark.yml  perf-benchmark.yml  prune-stale-prs.yml  release.yml  scale-benchmark.yml
charts/ferrum-mesh/: Chart.yaml  values.yaml
comparison/: README.md  run_comparison.sh
comparison/configs/: ferrum_comparison.yaml  ferrum_comparison_e2e_tls.yaml  ferrum_comparison_key_auth.yaml  kong.yaml  kong_e2e_tls.yaml  kong_key_auth.yaml
comparison/lua/: comparison_test_key_auth.lua
comparison/scripts/: generate_comparison_report.py
docs/: admin_api.md  admin_backup_restore.md  admin_batch_api.md  admin_metrics.md  admin_read_only_mode.md  api_specs.md  backend_mtls.md  ci_cd.md  cli.md  client_ip_resolution.md  configuration.md  connection_pooling.md  connection_saturation_benchmark.md  cors_plugin.md  cp_dp_mode.md  cp_namespace_tenancy.md  database_tls.md  dns_resolver.md  docker.md  error_classification.md  frontend_tls.md  functional_testing.md  functional_testing_auth_acl.md  functional_testing_database.md  functional_testing_file_mode.md  functional_testing_load_stress.md  http3.md  infrastructure_sizing.md  kubernetes_deployment.md  load_balancing.md  local_run.md  log_schema.md  mesh.md  mesh_control_plane.md  migrations.md  mongodb.md  node_agent.md  node_agent_security.md  notifications.md  overload_manager.md  (+9 more)
docs/upstream-h3-patches/: README.md
ebpf/: Cargo.toml
ebpf/ferrum-ebpf/: Cargo.toml
ebpf/ferrum-ebpf-common/: Cargo.toml
ebpf/ferrum-ebpf/src/: connect4.rs  connect6.rs  getpeername4.rs  getpeername6.rs  main.rs  maps.rs  sock_ops.rs  tc_inbound.rs
examples/: README.md  config.yaml
perftest/: README.md  backend_results.txt  health_results.txt  perf_config.yaml  performance_report.html  quick_test.sh  quick_test.txt  run_perf_test.sh  users_results.txt
proto/: ferrum.proto  workload_api.proto
scripts/: install-build-deps.sh
src/: circuit_breaker.rs  cli.rs  config_delta.rs  connection_pool.rs  consumer_index.rs  health_check.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  overload.rs  plugin_cache.rs  request_epoch.rs  retry.rs  router_cache.rs  runtime_metrics.rs  runtime_metrics_tracing_layer.rs  socket_opts.rs  startup.rs  system_metrics.rs
src/admin/: audit.rs  crud.rs  jwt_auth.rs  mesh_config_drift.rs  mod.rs  spec_codec.rs
src/capture/: mod.rs
src/cni/: client.rs  mod.rs  rpc.rs  spec.rs
src/config/: config_backup.rs  config_migration.rs  db_backend.rs  db_loader.rs  env_config.rs  env_config_macro.rs  file_loader.rs  incremental_apply.rs  mesh.rs  mod.rs  mongo_store.rs  pool_config.rs  types.rs  validation_pipeline.rs
src/config_sources/: mod.rs
src/dns/: mod.rs
src/dtls/: mod.rs
src/ebpf/: bpf_metrics.rs  cgroup.rs  event_consumer.rs  kernel_probe.rs  loader.rs  maps.rs  mod.rs  pod_watcher.rs  veth.rs
src/grpc/: auth.rs  cp_server.rs  dp_client.rs  mesh_registry.rs  mesh_server.rs  mod.rs
src/http3/: client.rs  config.rs  cross_protocol.rs  mod.rs  server.rs  websocket.rs
src/identity/: file_loader.rs  mod.rs  rotation.rs
src/k8s_controller/: convert.rs  istio_status.rs  metrics.rs  mod.rs  reconciler.rs  resource_store.rs  status.rs  watcher.rs
src/logging/: mod.rs  runtime_overlay.rs
src/modes/: control_plane.rs  data_plane.rs  database.rs  file.rs  injector.rs  migrate.rs  mod.rs  node_agent.rs  node_agent_cni_server.rs  tls_reload.rs
src/notifications/: dispatch.rs  mod.rs  notification.rs  templating.rs
src/plugins/: cors.rs  (+68 more)
tests/: README.md  admin_cached_config_tests.rs  admin_read_only_tests.rs  admin_tests.rs  backend_mtls_tests.rs  config.yaml  config_file_loader_tests.rs  config_types_tests.rs  conformance_tests.rs  frontend_tls_tests.rs  http3_integration_tests.rs  plugin_utils.rs  proxy_tests.rs
tests/performance/mesh/: Cargo.toml  README.md  baseline.md  run.sh
tests/performance/mesh-dns-e2e/: .gitignore  Cargo.toml  README.md  baseline.md  build.rs  run.sh
tests/performance/mesh-dns-e2e/src/: dns_wire.rs  lib.rs  metrics.rs  slice.rs
tests/performance/mesh-hbone-e2e/: .gitignore  Cargo.toml  README.md  baseline.md  run.sh
tests/performance/mesh-hbone-e2e/src/: certs.rs  lib.rs  metrics.rs  tls.rs
tests/performance/mesh/benches/: authz_match.rs  slice_apply.rs  xds_translation.rs
(+593 files in other folders)
